iOS fixes: reset input styles, don't fix background attachment on small screens.

--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -48,3 +48,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+/* Custom */
+input {
+  -webkit-appearance: none;
+}
